# Copyright 2018 The Redcore (Beijing) Technology Co.,Ltd. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/ui.gni")

static_library("ysp_doc_view") {
  sources = [
    "ysp_doc_view_fetcher.cc",
    "ysp_doc_view_fetcher.h",
    "ysp_doc_view_manager.cc",
    "ysp_doc_view_manager.h",
  ]

  deps = [
    "//base",
    "//content/public/common",
    "//net",
    "//skia",
    "//url",
  ]
}
